hard-gists/99b7fb8ff89104d30eab/run.log
=== Docker Run Log for 99b7fb8ff89104d30eab ===
Started at: Mi 29. Okt 18:38:04 CET 2025

[2025-10-29 18:38:04] START: Running container for 99b7fb8ff89104d30eab
[2025-10-29 18:38:05] SUCCESS: Container f9bf62cf43d234df2dab9e2ceaaef41c4f53c7128c8376ff8f81c491759d5f48 started for 99b7fb8ff89104d30eab
=== Container logs for 99b7fb8ff89104d30eab ===
  File "/snippet.py", line 91
    except Exception,inst:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 99b7fb8ff89104d30eab ===
[2025-10-29 18:38:07] INFO: Container f9bf62cf43d234df2dab9e2ceaaef41c4f53c7128c8376ff8f81c491759d5f48 has stopped
